<resources>
    <string name="app_name">MY STUDIO</string>
    <string name="Hello_World">Hello World!!</string>

    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">MESSEGE RECEIVED</string>
    <string name="buttton_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>

    <string name="button_label_toast">Toast</string>
    <string name="button_label_count">Count</string>
    <string name="count_initial_value">1</string>
    <string name="toast_massage">Hello Toast!</string>
    <string name="button_label_restart">Restart</string>
    <string name="enter_fibonacci_limit">Masukkan Angka Limit</string>

    <string name="article_title"> Kasus Sianida</string>
    <string name="article_subtitle">ICE COLD!</string>

    <string name="article_text"> Film dokumenter Ice Cold: Murder, Coffee and Jessica Wongso memaparkan pertanyaan tak terjawab tentang persidangan yang dilalui Jessica Wongso. Dengan menyajikan perspektif baru, film ini hadir bertahun-tahun setelah kematian sahabat Jessica, Wayan Mirna Salihin.


Film ini menggambarkan bagaimana Jessica yang mengajak teman-temannya, termasuk Mirna, untuk bertemu setelah sekian lama tak berjumpa. Pertemuan di salah satu kafe di mal ibu kota tersebut pun berlangsung lancar, sebelum akhirnya Mirna pingsan sesaat setelah meminum kopi yang sebelumnya dipesan Jessica.Dokumenter ini turut menyajikan rekaman CCTV pada waktu kejadian, berbagai footage berita saat persidangan berlangsung, hingga wawancara eksklusif dengan beberapa sumber, termasuk Jessica Wongso.


Persidangan atas dugaan pembunuhan Mirna Salihin digelar lima bulan setelah kematiannya. Sidang tersebut melalui 32 kali persidangan dengan menghadirkan puluhan saksi di pengadilan. Hasilnya, Jessica Wongso divonis bersalah atas kematian Mirna dan dijatuhi hukuman 20 tahun penjara.
Kasus yang berjalan cukup lama tersebut menyita banyak perhatian dari masyarakat Indonesia. Musababnya, banyak misteri tak terjawab selama rangkaian persidangan yang panjang tersebut. Salah satunya adalah mengenai akses untuk mendapatkan bubuk sianida yang tidak bisa didapatkan oleh orang sembarangan. Selain itu, motif Jessica di balik pembunuhan tersebut pun belum menemukan jawabannya.


Film dokumenter buatan Netflix ini menyoroti rangkaian persidangan yang saat itu menjadi sidang pertama yang disiarkan secara langsung di berbagai stasiun televisi Indonesia. Selain itu, kasus ini juga diliput secara intens oleh media massa, baik nasional maupun internasional.Tak hanya itu, pihak rumah produksi Beach House Pictures juga berhasil mendapatkan akses untuk mewawancarai Jessica Wongso secara langsung dari balik tahanan. Dalam video trailer yang diluncurkannya, ditampilkan juga sejumlah wawancara eksklusif yang dilakukan dengan beberapa narasumber. Mulai dari ayah dan saudara kembar  Mirna Salihin, pengacara Jessica Wongso, jurnalis yang mendalami kasus tersebut, hingga bagaimana saat itu kasus ini begitu ramai diberitakan oleh media massa Indonesia dan internasional.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mova1_timetohunt">Di Korea Selatan yang penuh dengan distopia, nilai mata uang won Korea Selatan telah jatuh dan membuat hasil tangkapan mereka menjadi tidak berharga. Jun-seok mengusulkan satu pencurian untuk keluar dari situasi menyedihkan mereka.</string>
    <string name="mova2_fastx">Bahaya kembali mengancam Dom dan kru nya ketika Dante Reyes memutuskan untuk membalas dendam terhadap Dom, Dominic dan kru nya harus kembali menghadapi musuh berbahaya untuk melindungi keluarga yang dicintainya</string>
    <string name="mova3_hunt">Setelah kejadian di Washington dan menurut informasi dari CIA, dia adalah mata-mata berbahaya dari Korea Utara yang mencoba membunuh presiden Korea Selatan. Kim dan Park bekerja untuk membasmi Donglim (Lalat Korea).</string>
    <string name="mova4_guardian">Pada tahun 1988, setelah kematian ibunya, Peter Quill muda diculik dari Bumi oleh Ravagers, sekelompok pencuri dan penyelundup alien yang dipimpin oleh Yondu Udonta.</string>

    <string name="movh1_themedium">Kru film dokumenter melakukan perjalanan ke wilayah Isan di Thailand untuk mewawancarai Nim, seorang cenayang/dukun dirasuki roh Ba Yan, dewi setempat. Nim mengalami krisis iman dan berfikir apakah dia benar-benar telah dirasuki oleh Ba Yan atau tidak.</string>
    <string name="movh2_unlocked">Suatu hari, Lee Na-Mi kehilangan ponselnya, kemudian seseorang berpura-pura memperbaiki ponselnya yang rusak, dia menginstal spyware di ponselnya. Na-Mi dan ayahnya berjuang untuk hidup dan mengungkap kebenarannya.</string>
    <string name="movh3_scream">Lima tahun setelah pembunuhan yang dilakukan Billy Loomis dan Stu Macher di Woodsboro, seorang siswa SMA Tara Carpenter diserang oleh Ghostface dan harus dirawat di rumah sakit. Di rumah sakit, Tara dan Richie diserang oleh Ghostface dan melarikan diri.</string>
    <string name="movh4_sewudino">Demi pengobatan bapaknya, Sri Rahayu, memutuskan untuk melamar sebagai pembantu di kediaman keluarga Atmodjo dan mendapat untuk menjaga Della Atmodjo, cucu Mbah Karsa, yang kena santet Sewu Dino beberapa tahun yang lalu, kemudian kejadian aneh pun mulai terjadi.</string>

    <string name="movc1_thepirates">Suatu hari, Moo-chi dan Hae-rang mengetahui bahwa harta karun keluarga kerajaan hilang dan mereka memulai petualangan berbahaya untuk mencari harta karun terbesar yang tidak akan pernah terlihat lagi dalam kehidupan bajak laut mereka.</string>
    <string name="movc2_thebig4">Seorang detektif yang sedang menyelidiki kematian ayahnya dan mengikuti petunjuk ke sebuah pulau tropis terpencil dan dia harus bekerja sama dengan para penjahat yang dilatih oleh ayahnya - empat pembunuh bayaran yang sudah pensiun.</string>
    <string name="movc3_luck">kehidupan serba sial yang dialami oleh Sam. Hari-hari sialnya mendadak berhenti ketika dia menemukan sebuah  koin ajaib yang dianggapnya sebagai koin keberuntungan. Hal itu pula yang membawanya bertemu dengan seekor kucing bernama Bob yang ternyata bisa berbicara.</string>
    <string name="movc4_familyswitch">Di Los Angeles, keluarga Walker yang terdiri dari Jess, Bill, serta ketiga anak mereka CC, Wyatt dan Miles. Keesokan paginya, keluarga ini terbangun dan mendapati diri mereka terpisah, mereka berada dalam tubuh lawan mereka yang membuat mereka sangat ketakutan.</string>
    

</resources>