<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pinkwallp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ScrollActivity">

    <TextView
        android:id="@+id/artikel_heading"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/pink"
        android:padding="@dimen/padding_regular"
        android:text="@string/article_title"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/artikel_heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/arikel_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/article_subtitle"
                android:textSize="24dp"
                android:fontFamily="serif"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/bluu"
                android:textStyle="bold"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault"/>

            <TextView
                android:id="@+id/artikel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:lineSpacingExtra="@dimen/padding_regular"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="13dp"
                android:text="@string/article_text"
                android:textColor="@color/black"
                android:fontFamily="serif"
                android:textSize="20dp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>