<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="25dp"
    android:background="@drawable/pinkwallp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentComedy">

    <ScrollView
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="0dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_comedy1"
                android:layout_width="350dp"
                android:layout_height="266dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/imgComedy1"
                    android:layout_width="168dp"
                    android:layout_height="254dp"
                    android:layout_marginTop="6dp"
                    android:layout_below="@+id/teks_Deskription1"
                    android:layout_gravity="left"
                    android:src="@drawable/gbluck" />

                <TextView
                    android:id="@+id/comedy_Title1"
                    android:layout_width="123dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/imgComedy1"
                    android:text="LUCK"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teks_Deskription1"
                    android:layout_width="179dp"
                    android:layout_height="183dp"
                    android:layout_below="@id/comedy_Title1"
                    android:layout_gravity="right"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="35dp"
                    android:layout_toRightOf="@id/imgComedy1"
                    android:maxLines="11"
                    android:text="@string/movc3_luck"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/luck"
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teks_Deskription1"
                    android:layout_gravity="bottom|right"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@id/imgComedy1"
                    android:onClick="playLuckTrailer"
                    android:text="Trailer" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_comedy2"
                android:layout_width="350dp"
                android:layout_height="266dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/comedy_Title2"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/img_Comedy2"
                    android:text="FAMILY SWITCH"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teks_Deskription2"
                    android:layout_width="179dp"
                    android:layout_height="183dp"
                    android:layout_below="@id/comedy_Title2"
                    android:layout_gravity="right"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="35dp"
                    android:layout_toRightOf="@id/img_Comedy2"
                    android:maxLines="11"
                    android:text="@string/movc4_familyswitch"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/img_Comedy2"
                    android:layout_width="168dp"
                    android:layout_height="254dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="6dp"
                    android:layout_toLeftOf="@id/teks_Deskription2"
                    android:src="@drawable/gbfamilyswitch" />

                <Button
                    android:id="@+id/familySwitch"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teks_Deskription2"
                    android:layout_gravity="bottom|right"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@id/img_Comedy2"
                    android:onClick="playSFamilySwitchTrailer"
                    android:text="TRAILER" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_comedy3"
                android:layout_width="350dp"
                android:layout_height="266dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/imgComedy3"
                    android:layout_width="168dp"
                    android:layout_height="254dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/gbthebig4" />

                <TextView
                    android:id="@+id/comedy_Title3"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    android:layout_toRightOf="@id/imgComedy3"
                    android:text="THE BIG 4"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/teks_Deskription3"
                    android:layout_width="179dp"
                    android:layout_height="183dp"
                    android:layout_below="@id/comedy_Title3"
                    android:layout_gravity="right"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="35dp"
                    android:layout_toRightOf="@id/imgComedy3"
                    android:maxLines="11"
                    android:text="@string/movc2_thebig4"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/theBig4"
                    android:layout_width="177dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teks_Deskription3"
                    android:layout_gravity="bottom|right"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@id/imgComedy3"
                    android:onClick="playTheBig4Trailer"
                    android:text="Trailer" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cd_Comedy4"
                android:layout_width="350dp"
                android:layout_height="266dp"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <ImageView
                    android:id="@+id/img_Comedy4"
                    android:layout_width="168dp"
                    android:layout_height="254dp"
                    android:layout_gravity="left"
                    android:layout_marginTop="6dp"
                    android:src="@drawable/gbthepirates" />

                <TextView
                    android:id="@+id/comedy_Title4"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="8dp"
                    android:text="THE PIRATES"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/teks_Deskription4"
                    android:layout_width="178dp"
                    android:layout_height="166dp"
                    android:layout_below="@id/comedy_Title4"
                    android:layout_gravity="right"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="13dp"
                    android:layout_marginTop="35dp"
                    android:layout_toRightOf="@id/img_Comedy4"
                    android:maxLines="11"
                    android:text="@string/movc1_thepirates"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/thePirates"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teks_Deskription4"
                    android:layout_gravity="bottom|right"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="2dp"
                    android:layout_toRightOf="@id/img_Comedy4"
                    android:onClick="playThePiratesTrailer"
                    android:text="Trailer" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>